--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ h6 {
   opacity: 0;
   visibility: hidden;
   background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.35);
   transition: 0.3s;
   border-top: 2px solid #2596be;
 }
@@ -445,7 +445,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.35);
+  background: rgba(0, 0, 0, 0.5);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -1534,6 +1534,15 @@ section {
   margin-bottom: 0;
   font-size: 14px;
   color: #5b5b5b;
+}
+
+.contact .info p a{
+  color: #5b5b5b;
+  transition: color .3s;
+}
+
+.contact .info p a:hover{
+  color: #2596be;
 }
 
 .contact .info .email,
